comlete roster and schedule update

--- a/css/events.css
+++ b/css/events.css
@@ -1,20 +1,16 @@
-
-.teampage {
+.eventspage {
     padding-top: 10px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     text-align: center;
     width: 600px; 
     margin: 0 auto;
     grid-gap: 10px
 }
-.team {
+.events {
     border: 1px solid #111;
     padding-bottom: 30px;
-    
 }
-
-
 
 
 
